updated mobile responsive, minor color fixes and heading not working on iphone. Testing to see if it works after changes

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,10 @@
 		bg-gradient-to-br
 		from-gray-200
 		to-gray-400
-		w-24
-		h-24
+		w-20
+		h-20
+		sm:w-24
+		sm:h-24
 		lg:w-32
 		lg:h-32
 		rounded
@@ -17,8 +19,10 @@
 		bg-gradient-to-br
 	from-gray-400
 	to-gray-700
-		w-24
-		h-24
+		w-20
+		h-20
+		sm:w-24
+		sm:h-24
 		lg:w-32
 		lg:h-32
 		opacity-50;
@@ -30,8 +34,10 @@
 		bg-gradient-to-br
 	from-gray-200
 	to-gray-400
-		w-24
-		h-24
+		w-20
+		h-20
+		sm:w-24
+		sm:h-24
 		lg:w-32
 		lg:h-32
 		rounded
@@ -44,8 +50,10 @@
 		bg-gradient-to-br
 		from-teal-100
 		to-teal-200
-		w-28
-		h-28
+		w-20
+		h-20
+		sm:w-28
+		sm:h-28
 		rounded
 		opacity-50;
 }
@@ -56,8 +64,10 @@
 		bg-gradient-to-br
 	from-cyan-200
 	to-cyan-300
-	  w-28
-		h-28
+		w-20
+		h-20
+	  sm:w-28
+		sm:h-28
 		opacity-50;
 }
 .square-small-light-blue{
@@ -67,8 +77,10 @@
 		bg-gradient-to-br
 	from-light-blue-200
 	to-light-blue-400
-		w-28
-		h-28
+		w-20
+		h-20
+		sm:w-28
+		sm:h-28
 		rounded
 		opacity-50;
 }
